removed block_pos_in_child from code and db
